--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "keymirror": "^0.1.1",
     "nodemon": "^1.14.7",
     "react-hot-loader": "^3.1.3",
     "redux-actions": "^2.2.1",
